<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActPaymentCard">


    <TextView
        android:id="@+id/tv_good_bye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:padding="5dp"
        android:text="@string/tvParabens"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/iv_finalizado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_good_bye"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/congratulations_bye" />

    <Button
        android:id="@+id/btn_volta_compras"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="31dp"
        android:background="@drawable/add_prod_button"
        android:text="@string/backBuy"
        android:textColor="@color/white"
        android:layout_marginEnd="31dp"
        android:layout_below="@+id/iv_finalizado"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lbl_thanks_bottom"
        android:textColor="@color/black"
        android:layout_alignBottom="@+id/btn_volta_compras"
        android:layout_alignLeft="@+id/tv_good_bye"
        android:layout_alignStart="@+id/tv_good_bye" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:visibility="gone" />


</RelativeLayout>
