<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageProd"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:src="@null" />

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Nome Produto"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="Preço"
            android:textAlignment="center"
            android:textColor="@color/darkred"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_adicionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:paddingLeft="13dp"
            android:drawableLeft="@drawable/ic_add_list_item_icon"
            android:text="@string/title_add_prod_list"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_localizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@mipmap/localization"
            android:text="@string/lbl_localization"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="13dp"
            android:drawableLeft="@drawable/ic_close_box_icon"
            android:text="@string/lbl_cancelar"
            android:textColor="@color/black" />


    </LinearLayout>

</ScrollView>