<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_money"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.emersonlima.carrinhointeligente.ActPaymentMoney">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_codigo"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:background="@drawable/vw_pressed"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv_codigo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_weight="0.09"
            android:padding="4dp"
            android:text="12345"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_codigo"
        android:layout_below="@+id/progress_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:padding="5dp"
        android:text="@string/lbl_caixa"
        android:textColor="@color/material_drawer_primary_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="70dp"
        android:layout_toLeftOf="@+id/btn_volta_compras"
        android:gravity="center"
        android:text="@string/lbl_thanks_bottom"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_volta_compras"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignTop="@+id/textView2"
        android:background="@drawable/add_prod_button"
        android:text="@string/backBuy"
        android:textColor="@color/white" />

</RelativeLayout>
